--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -247,7 +247,7 @@ Advanced=False
 
 [DetailCustomWidgetExpansion]
 InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Jump.IA_Jump,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Move.IA_Move,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Pause.IA_Pause
-InputAction=
+InputAction=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Jump.IA_Jump,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Move.IA_Move,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Pause.IA_Pause
 GeneralProjectSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierSmoothDelta,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS
 MoviePlayerSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierSmoothDelta,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS
 GameplayTagsSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierSmoothDelta,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS
@@ -455,18 +455,21 @@ LogVisualizerSettings=EnhancedInputDeveloperSettings.Modifier Default Values.Inp
 StaticMesh=StaticMesh.ImportSettings.Mesh
 InterchangeGenericAssetsPipeline=InterchangeGenericAssetsPipeline.Common Meshes.Build
 BlendSpace1D=BlendSpace1D.Axis Settings.Horizontal Axis
-SkeletalMeshComponent=
+SkeletalMeshComponent=SkeletalMeshComponent.Physics.ConstraintsGroup,CameraComponent.CameraSettings.Overscan,CameraComponent.PostProcess.Lens,CameraComponent.PostProcess.Lens|Exposure,CameraComponent.PostProcess.Lens|Camera,CameraComponent.TransformCommon.Transform
 BP_ThirdPersonCharacter_C=SkeletalMeshComponent.Physics.ConstraintsGroup
 BoxComponent=SkeletalMeshComponent.Physics.ConstraintsGroup
-SpringArmComponent=SkeletalMeshComponent.Physics.ConstraintsGroup
-CapsuleComponent=SkeletalMeshComponent.Physics.ConstraintsGroup
+SpringArmComponent=SkeletalMeshComponent.Physics.ConstraintsGroup,SpringArmComponent.TransformCommon.Transform
+CapsuleComponent=
 PlayerStart=SkeletalMeshComponent.Physics.ConstraintsGroup
 StaticMeshActor=SkeletalMeshComponent.Physics.ConstraintsGroup
-CameraComponent=SkeletalMeshComponent.Physics.ConstraintsGroup
-BP_Hamsti_C=SkeletalMeshComponent.Physics.ConstraintsGroup
+CameraComponent=SkeletalMeshComponent.Physics.ConstraintsGroup,CameraComponent.CameraSettings.Overscan,CameraComponent.PostProcess.Lens,CameraComponent.PostProcess.Lens|Exposure,CameraComponent.PostProcess.Lens|Camera,CameraComponent.TransformCommon.Transform
+BP_Hamsti_C=SkeletalMeshComponent.Physics.ConstraintsGroup,CameraComponent.CameraSettings.Overscan,CameraComponent.PostProcess.Lens,CameraComponent.PostProcess.Lens|Exposure,CameraComponent.PostProcess.Lens|Camera,CameraComponent.TransformCommon.Transform
+K2Node_EnhancedInputAction=SkeletalMeshComponent.Physics.ConstraintsGroup,CameraComponent.CameraSettings.Overscan
+Blueprint=SkeletalMeshComponent.Physics.ConstraintsGroup,CameraComponent.CameraSettings.Overscan,CameraComponent.PostProcess.Lens,CameraComponent.PostProcess.Lens|Exposure,CameraComponent.PostProcess.Lens|Camera,CameraComponent.TransformCommon.Transform
+PropertyWrapper=SkeletalMeshComponent.Physics.ConstraintsGroup,CameraComponent.CameraSettings.Overscan,CameraComponent.PostProcess.Lens,CameraComponent.PostProcess.Lens|Exposure,CameraComponent.PostProcess.Lens|Camera,CameraComponent.TransformCommon.Transform
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/ThirdPerson/Blueprints/LevelParts
+ContentBrowserTab1.SelectedPaths=/Game/ThirdPerson/Input
 ContentBrowserTab1.PluginFilters=
 AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
@@ -552,9 +555,11 @@ LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=SkeletalMeshEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=AnimationBlueprintEditor
@@ -580,38 +585,41 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
+OpenAssetsAtExit=/Game/ThirdPerson/Input/IMC_Default.IMC_Default
+OpenAssetsAtExit=/Game/ThirdPerson/Input/Actions/IA_Look.IA_Look
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/ThirdPerson/Blueprints/LevelParts/BP_Trigger
-MRUItem1=/Game/ThirdPerson/Blueprints/BP_Hamsti
-MRUItem2=/Game/Characters/Hamsti/HamstiRig
-MRUItem3=/Game/ThirdPerson/Blueprints/LevelParts/BP_TriggerChecker
-MRUItem4=/Game/ThirdPerson/Blueprints/BPI/BPI_Reaction
-MRUItem5=/Game/Characters/Hamsti/ABP_Hamsti
-MRUItem6=/Game/Characters/Hamsti/BS1_IdleWalk
-MRUItem7=/Game/Characters/Hamsti/HamstiRig_PhysicsAsset
-MRUItem8=/Game/Characters/Hamsti/Black
-MRUItem9=/Game/Characters/Hamsti/AugenTest
-MRUItem10=/Game/UI/Styles/BP_Deafault_Styles
-MRUItem11=/Game/UI/Styles/BP_CommonButtonStyle
-MRUItem12=/Game/UI/Styles/BP_CommonHoverText
-MRUItem13=/Game/Characters/Hamsti/HamstiRig_Anim_rig_Idle
-MRUItem14=/Game/Characters/Hamsti/HamstiRig_Anim_rig_Fall
-MRUItem15=/Game/Characters/Hamsti/HamstiRig_Anim_rig_Walk
-MRUItem16=/Engine/EditorMeshes/MatineeCam_SM
-MRUItem17=/Game/UI/CAW_Options
-MRUItem18=/Game/ThirdPerson/Input/IMC_Default
-MRUItem19=/Game/ThirdPerson/Input/Actions/IA_Pause
-MRUItem20=/Game/ThirdPerson/Blueprints/LevelParts/FL_utils
-MRUItem21=/Game/ThirdPerson/Blueprints/BP_HUD
-MRUItem22=/Game/ThirdPerson/Blueprints/BP_PlayerController
-MRUItem23=/Game/UI/CAW_Main
-MRUItem24=/Game/ThirdPerson/Blueprints/BPI/BPI_HUD
-MRUItem25=/Game/UI/Styles/BP_CommonPressedText
-MRUItem26=/Game/UI/Styles/BP_CommonNormalText
-MRUItem27=/Game/UI/Styles/BP_CommonButton
-MRUItem28=/Game/UI/CAW_Pause
+MRUItem0=/Game/ThirdPerson/Input/IMC_Default
+MRUItem1=/Game/ThirdPerson/Input/Actions/IA_Look
+MRUItem2=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
+MRUItem3=/Game/ThirdPerson/Blueprints/BP_Hamsti
+MRUItem4=/Game/ThirdPerson/Blueprints/LevelParts/BP_Trigger
+MRUItem5=/Game/Characters/Hamsti/HamstiRig
+MRUItem6=/Game/ThirdPerson/Blueprints/LevelParts/BP_TriggerChecker
+MRUItem7=/Game/ThirdPerson/Blueprints/BPI/BPI_Reaction
+MRUItem8=/Game/Characters/Hamsti/ABP_Hamsti
+MRUItem9=/Game/Characters/Hamsti/BS1_IdleWalk
+MRUItem10=/Game/Characters/Hamsti/HamstiRig_PhysicsAsset
+MRUItem11=/Game/Characters/Hamsti/Black
+MRUItem12=/Game/Characters/Hamsti/AugenTest
+MRUItem13=/Game/UI/Styles/BP_Deafault_Styles
+MRUItem14=/Game/UI/Styles/BP_CommonButtonStyle
+MRUItem15=/Game/UI/Styles/BP_CommonHoverText
+MRUItem16=/Game/Characters/Hamsti/HamstiRig_Anim_rig_Idle
+MRUItem17=/Game/Characters/Hamsti/HamstiRig_Anim_rig_Fall
+MRUItem18=/Game/Characters/Hamsti/HamstiRig_Anim_rig_Walk
+MRUItem19=/Engine/EditorMeshes/MatineeCam_SM
+MRUItem20=/Game/UI/CAW_Options
+MRUItem21=/Game/ThirdPerson/Input/Actions/IA_Pause
+MRUItem22=/Game/ThirdPerson/Blueprints/LevelParts/FL_utils
+MRUItem23=/Game/ThirdPerson/Blueprints/BP_HUD
+MRUItem24=/Game/ThirdPerson/Blueprints/BP_PlayerController
+MRUItem25=/Game/UI/CAW_Main
+MRUItem26=/Game/ThirdPerson/Blueprints/BPI/BPI_HUD
+MRUItem27=/Game/UI/Styles/BP_CommonPressedText
+MRUItem28=/Game/UI/Styles/BP_CommonNormalText
+MRUItem29=/Game/UI/Styles/BP_CommonButton
 
 [DetailCategories]
 InputMappingContext.Mappings=True
@@ -1932,7 +1940,7 @@ BP_Hamsti_C.Physics=True
 BP_Hamsti_C.Events=True
 BP_Hamsti_C.TransformCommon=True
 BP_Hamsti_C.Animation=True
-BP_Hamsti_C.Mesh=True
+BP_Hamsti_C.Mesh=False
 BP_Hamsti_C.ComponentTick=True
 BP_Hamsti_C.Clothing=True
 BP_Hamsti_C.LeaderPoseComponent=True
@@ -1972,7 +1980,10 @@ BP_Hamsti_C.Shape=True
 BP_Hamsti_C.Character=True
 BP_Hamsti_C.Camera=True
 BP_Hamsti_C.Pawn=True
-BP_Hamsti_C.Materials=True
+BP_Hamsti_C.Materials=False
+CharacterMovementComponent.Replication=True
+CharacterMovementComponent.Navigation=True
+CameraComponent.AssetUserData=True
 
 [DetailPropertyExpansion]
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
@@ -2002,7 +2013,7 @@ VerticalBox="\"Object.Layout.Slot.Object.Layout.Layout|ScrollBox Slot.Padding\" 
 CommonActivatableWidgetStack="\"Object.Render Transform.RenderTransform\" "
 CommonActivatableWidgetContainerBase="\"Object.Render Transform.RenderTransform\" "
 InputMappingContext="\"Object.Mappings.Mappings.Mappings[14]\" \"Object.Mappings.Mappings.Mappings[15]\" "
-DataAsset="\"Object.SkeletalMeshes\" "
+DataAsset=
 AssetManagerSettings="\"Object.Asset Manager.PrimaryAssetTypesToScan\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1]\" "
 AudioSettings="\"Object.Quality.QualityLevels\" \"Object.Quality.QualityLevels.QualityLevels[0]\" "
 CineCameraSettings="\"Object.Lens.LensPresets\" \"Object.Filmback.FilmbackPresets\" \"Object.Filmback.FilmbackPresets.FilmbackPresets[0]\" \"Object.Filmback.FilmbackPresets.FilmbackPresets[0].FilmbackSettings\" \"Object.Filmback.FilmbackPresets.FilmbackPresets[1]\" \"Object.Filmback.FilmbackPresets.FilmbackPresets[1].FilmbackSettings\" \"Object.Filmback.FilmbackPresets.FilmbackPresets[10]\" \"Object.Filmback.FilmbackPresets.FilmbackPresets[10].FilmbackSettings\" \"Object.Filmback.FilmbackPresets.FilmbackPresets[11]\" \"Object.Filmback.FilmbackPresets.FilmbackPresets[11].FilmbackSettings\" \"Object.Filmback.FilmbackPresets.FilmbackPresets[12]\" \"Object.Filmback.FilmbackPresets.FilmbackPresets[12].FilmbackSettings\" \"Object.Filmback.FilmbackPresets.FilmbackPresets[2]\" \"Object.Filmback.FilmbackPresets.FilmbackPresets[2].FilmbackSettings\" \"Object.Filmback.FilmbackPresets.FilmbackPresets[3]\" \"Object.Filmback.FilmbackPresets.FilmbackPresets[3].FilmbackSettings\" \"Object.Filmback.FilmbackPresets.FilmbackPresets[4]\" \"Object.Filmback.FilmbackPresets.FilmbackPresets[4].FilmbackSettings\" \"Object.Filmback.FilmbackPresets.FilmbackPresets[5]\" \"Object.Filmback.FilmbackPresets.FilmbackPresets[5].FilmbackSettings\" \"Object.Filmback.FilmbackPresets.FilmbackPresets[6]\" \"Object.Filmback.FilmbackPresets.FilmbackPresets[6].FilmbackSettings\" \"Object.Filmback.FilmbackPresets.FilmbackPresets[7]\" \"Object.Filmback.FilmbackPresets.FilmbackPresets[7].FilmbackSettings\" \"Object.Filmback.FilmbackPresets.FilmbackPresets[8]\" \"Object.Filmback.FilmbackPresets.FilmbackPresets[8].FilmbackSettings\" \"Object.Filmback.FilmbackPresets.FilmbackPresets[9]\" \"Object.Filmback.FilmbackPresets.FilmbackPresets[9].FilmbackSettings\" \"Object.Crop.CropPresets\" \"Object.Crop.CropPresets.CropPresets[0]\" \"Object.Crop.CropPresets.CropPresets[0].CropSettings\" \"Object.Crop.CropPresets.CropPresets[1]\" \"Object.Crop.CropPresets.CropPresets[1].CropSettings\" \"Object.Crop.CropPresets.CropPresets[2]\" \"Object.Crop.CropPresets.CropPresets[2].CropSettings\" \"Object.Crop.CropPresets.CropPresets[3]\" \"Object.Crop.CropPresets.CropPresets[3].CropSettings\" "
@@ -2048,9 +2059,14 @@ Slider="\"Object.Render Transform.RenderTransform\" "
 CAW_Options_C="\"Object.Render Transform.RenderTransform\" "
 BP_Trigger_C=
 BP_ThirdPersonCharacter_C="\"Object.Character.Mesh.Object.Mesh.SkinCacheUsage\" "
-Character="\"Object.Character.Mesh.Object.Mesh.SkinCacheUsage\" "
-Pawn="\"Object.Character.Mesh.Object.Mesh.SkinCacheUsage\" "
-BP_Hamsti_C="\"Object.Character.Mesh.Object.Mesh.SkinCacheUsage\" "
+Character=
+Pawn=
+BP_Hamsti_C=
+CharacterMovementComponent="\"Object.NavMovement.NavAgentProps\" "
+PawnMovementComponent="\"Object.NavMovement.NavAgentProps\" "
+NavMovementComponent="\"Object.NavMovement.NavAgentProps\" "
+MovementComponent="\"Object.NavMovement.NavAgentProps\" "
+CameraComponent="\"Object.PostProcess.PostProcessSettings\" "
 
 [DetailCategoriesAdvanced]
 InputAction.Action=True
@@ -2061,9 +2077,12 @@ Blueprint.ClassOptions=True
 CommonTextBlock.Appearance=True
 BP_HUD_C.Tick=True
 CapsuleComponent.Shape=False
-CameraComponent.Physics=False
+CameraComponent.Physics=True
 CameraComponent.CameraOptions=True
 CameraComponent.ComponentTick=True
+BP_Hamsti_C.Tick=False
+SpringArmComponent.Rendering=False
+BP_Hamsti_C.Actor=True
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -2099,6 +2118,7 @@ PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap",
 /Game/Characters/Hamsti/BS1_IdleWalk.BS1_IdleWalk=0
 /Game/ThirdPerson/Blueprints/LevelParts/BP_TriggerChecker.BP_TriggerChecker=0
 /Game/UI/CAW_Main.CAW_Main=0
+/Game/ThirdPerson/Blueprints/LevelParts/BP_Trigger.BP_Trigger=1
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=156.000
